# fishbot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
data/processed/: access_scores.parquet  dispersal_insights.json  ontario_species_ranges.json
docs/planning/: fishing_ai_advanced_capabilities.md  fishing_ai_build_guide.md  fishing_ai_feature_catalog.md  fishing_ai_getting_started.md  fishing_ai_multi_jurisdiction.md  fishing_ai_roadmap.md  fishing_ai_spot_discovery.md  fishing_bot_phase1_beginner_guide.md  phase1q_plan.md  phase1q_research.md
prompts/: system.md
src/agent/: chat.py  client.py  system_prompt.py
src/cli/: export_map.py  main.py
src/jurisdictions/: base.py  geo.py  ontario.py  registry.py  stubs.py  unknown.py
src/map/: index.html
src/models/: behavioral_insight.py  benthic_sample.py  bird_observation.py  catch.py  gbif_observation.py  geology_unit.py  hydrology.py  jurisdiction.py  observation.py  profile.py  recommendation.py  reddit_post.py  regulation.py  sdm_result.py  species_range.py  stocking_record.py  stream_gauge.py  stream_temperature.py  trip.py  water_feature.py  water_quality_reading.py  weather.py
src/services/: accessibility.py  benthic.py  ebird.py  gbif.py  geology.py  hydrology.py  insights.py  observations.py  osm.py  reddit.py  regulations.py  sdm_features.py  sdm_predict.py  sdm_predictions.py  sdm_train.py  sdm_training.py  species_ranges.py  stocking.py  stream_gauge.py  stream_temperature.py  tactical.py  untapped_potential.py  (+3 more)
tests/: test_cli_export_map.py  test_ingest_benthic.py  test_ingest_ebird.py  test_ingest_gbif.py  test_ingest_geology.py  test_ingest_hydat_temperature.py  test_ingest_hydro_network.py  test_ingest_inaturalist.py  test_ingest_osm.py  test_ingest_reddit.py  test_ingest_regulations.py  test_ingest_stocking.py  test_ingest_water_quality.py  test_ingest_weather.py  test_ingest_wsc.py  test_jurisdictions.py  test_models.py  test_models_behavioral_insight.py  test_models_bird_observation.py  test_models_gbif_observation.py  test_models_hydrology.py  test_models_observation.py  test_models_recommendation.py  test_models_reddit_post.py  test_models_regulation.py  test_models_sdm_result.py  test_models_species_range.py  test_models_stocking_record.py  test_models_stream_gauge.py  test_models_stream_temperature.py  test_models_water_feature.py  test_placeholder.py  test_services_accessibility.py  test_services_hydrology.py  test_services_insights.py  test_services_osm.py  test_services_reddit.py  test_services_regulations.py  test_services_sdm_features.py  test_services_sdm_predict.py  (+14 more)
(+61 files in other folders)
