[project]
name = "fishbot"
version = "0.1.0"
description = "Personal fishing exploration bot — jurisdiction-aware, Ontario first"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.103.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "sqlite-utils>=3.39",
    "typer>=0.25.1",
]

[project.scripts]
fishbot = "src.cli.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
